# vjepa2.1-pca

./: .gitignore  LICENSE  README.md  VALIDATION.md  pyproject.toml
src/vjepa2_1_pca/: cli.py
tests/: test_cli.py
