[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vjepa2-1-pca"
version = "0.1.0"
description = "Companion utility for rendering vjepa2.1 dense PCA visualizations."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
    "vjepa",
    "vjepa2",
    "vjepa2.1",
    "world-model",
    "pca",
    "visualization",
    "dense-features",
    "video",
]
dependencies = [
    "numpy",
    "pillow",
    "torch",
]

[project.urls]
Homepage = "https://github.com/Tsunami-kun/vjepa2.1-pca"
Repository = "https://github.com/Tsunami-kun/vjepa2.1-pca"
Issues = "https://github.com/Tsunami-kun/vjepa2.1-pca/issues"

[project.scripts]
vjepa21-pca = "vjepa2_1_pca.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
